# ecto_image_pipeline

./: .gitignore  10.image_pipeline.buildspace.all.in  10image_pipeline.buildspace.all.in  CHANGELOG.rst  CMakeLists.txt  genindex.html  index.html  objects.inv  package.xml  params.json  readme.rst  search.html  searchindex.js  setup.py  stack.xml  stack.yaml
.doctrees/: environment.pickle  index.doctree
cells/: CMakeLists.txt  CalibImageWriter.cpp  CalibrationLoader.cpp  CameraFromOpenNI.cpp  CameraModelToCv.cpp  DepthRegister.cpp  Latch.cpp  PinholeModelLoader.cpp  PointsAccumulator.cpp  Rectifier.cpp  RectifierNC.cpp  RescaleRegisteredDepth.cpp  StereoCalibration.cpp  StereoModelLoader.cpp  module.cpp
cells/conversion/: CMakeLists.txt  MatToPointCloud.cpp  PointCloudToDepthMat.cpp  PointCloudToMat.cpp  module.cpp
cells/g2o/: CMakeLists.txt  Sba.cpp  SbaDisparity.cpp  module.cpp
cells/scripts/: cal_vga.yml  dir_calibrator.py  dir_stereo_calibrator.py  kinect_ir_undistort.py  kinect_register.py  left.yml  openni_calibration_capture.py  pattern_helpers.py  rgbd_calibrator.py  right.yml  stereo.yml  vidcap.py
cmake/: config.cmake  image_pipelineConfig-version.cmake.in  image_pipelineConfig.cmake.in  install.cmake
doc/: conf.py  index.rst
include/ecto_image_pipeline/: calibration.hpp  conversions.hpp  image_pipeline.hpp  pinhole_camera_model.h  pose.hpp  pose_graph.hpp  stereo_camera_model.h
include/ecto_image_pipeline/pcl/: conversions.hpp
include/image_pipeline/: abi.hpp  calibration.hpp  conversions.hpp  depth_to_3d.cpp  enums.hpp  image_pipeline.hpp  pinhole_camera_model.h  pose.hpp  pose_graph.hpp  stereo_camera_model.h
include/image_pipeline/pcl/: conversions.hpp
python/: CMakeLists.txt  __init__.py.in
python/ecto_image_pipeline/: __init__.py
python/ecto_image_pipeline/io/source/: __init__.py  camera_base.py  openni.py  ros.py
python/image_pipeline/: __init__.py
python/image_pipeline/io/source/: __init__.py  openni.py  ros.py
samples/: capture_openni_usb.py
samples/user_project/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  abi.cpp  calibration.cpp  conversions.cpp  image_pipeline.cpp  pinhole_camera_model.cpp  pose.cpp  pose_graph.cpp  stereo_camera_model.cpp
test/: CMakeLists.txt  capture_openni_usb.py  pinhole.cpp  run_test.py  source_sink.py  test_common_io_ros_source_bag_reader.py  test_common_io_ros_source_kinect.py  test_pose_graph.cpp  test_source.py
