<package>
  <name>ecto_image_pipeline</name>
  <version>0.4.11</version>
  <description>Common tools for image based pipelines. Includes stereo and mono camera drivers, rectification, image sinks, calibration, etc..</description>
  <author>Kurt Konolige</author>
  <author email="erublee@willowgarage.com">Ethan Rublee</author>
  <maintainer email="vrabaud@willowgarage.com">Vincent Rabaud</maintainer>
  <url>http://ecto.willowgarage.com</url>
  <license>BSD</license>

  <build_depend>boost</build_depend>
  <build_depend>ecto</build_depend>
  <build_depend>ecto_opencv</build_depend>
  <build_depend>libg2o</build_depend>
  <build_depend>opencv_candidate</build_depend>
  <build_depend>opencv2</build_depend>
  <build_depend>pcl</build_depend>

  <run_depend>boost</run_depend>
  <run_depend>ecto</run_depend>
  <run_depend>ecto_opencv</run_depend>
  <run_depend>eigen</run_depend>
  <run_depend>libg2o</run_depend>
  <run_depend>opencv_candidate</run_depend>
  <run_depend>opencv2</run_depend>
  <run_depend>pcl</run_depend>

  <buildtool_depend>catkin</buildtool_depend>
</package>
